# servicenow-platform-mcp

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  INSTALL.md  README.md  pyproject.toml
.github/: FUNDING.yml  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  documentation.yml  feature_request.yml  tool_request.yml
.github/workflows/: ci.yml  codeql.yml  release-please.yml
.sisyphus/: boulder.json
.sisyphus/evidence/: final-F1-compliance-audit.txt  final-F2-code-quality.txt  final-F3-package-loading.txt  final-F4-scope-fidelity.txt  final-wave-summary.txt  implementation-complete.txt  task-1-client-signatures.txt  task-1-completion-report.txt  task-1-mypy-client.txt  task-1-refactor-valid-packages.txt  task-11-full-suite.txt  task-11-knowledge-search.txt  task-12-full-pkg.txt  task-12-full-suite.txt  task-12-incident-pkg.txt  task-12-uniqueness.txt  task-2-lint.txt  task-2-module-import.txt  task-3-completion-report.txt  task-3-params-validation.txt  task-3-tools-registered.txt  task-4-all-tools.txt  task-4-completion-report.txt  task-4-poll-constants.txt  task-4-write-gate.txt  task-5-full-registration.txt  task-5-no-regression.txt  task-5-scaffolding.txt  task-6-full-suite.txt  task-6-incident-create.txt  task-6-incident-list.txt  task-6-incident-resolve.txt  task-6-introspection-tests.txt  task-6-test-patterns.txt  task-7-all-tests.txt  task-7-change-list.txt  task-7-change-tasks.txt  task-7-execution-tests.txt  task-7-full-suite.txt  task-7-write-gate-tests.txt  (+7 more)
.sisyphus/evidence/final-qa/: SUMMARY.txt  client-signatures.txt  edge-1-empty-results.txt  edge-2-not-found.txt  edge-3-polling-timeout.txt  edge-4-write-gate-blocked.txt  edge-5-execution-failure.txt  edge-6-missing-params.txt  edge-7-flaky-detection.txt  evidence-manifest.txt  full-test-suite.txt  integration-1-full-test-analysis.txt  integration-1-query-detail-health.txt  integration-2-list-run-poll.txt  integration-2-suite-execution.txt  integration-3-get-execute-results.txt  integration-3-test-execution.txt  scenario-1-list-tests.txt  scenario-2-get-test.txt  scenario-3-list-suites.txt  scenario-4-get-results.txt  scenario-5-run-test.txt  scenario-6-run-suite.txt  scenario-7-test-health.txt  task1-scenario1-client-signatures.txt  task1-scenario2-mypy-client.txt  task2-scenario1-module-import.txt  task2-scenario2-lint.txt  task3-scenario1-tools-registered.txt  task3-scenario2-params-validation.txt  task4-scenario1-write-gate.txt  task4-scenario2-all-tools.txt  task4-scenario3-poll-constants.txt  task5-scenario1-full-registration.txt  task5-scenario2-no-regression.txt  task6-scenario1-introspection-tests.txt  task6-scenario2-test-patterns.txt  task7-scenario1-all-tests.txt  task7-scenario2-write-gate-tests.txt  task8-scenario1-full-verification.txt  (+1 more)
.sisyphus/notepads/atf-tools/: learnings.md
.sisyphus/notepads/domain-packages/: learnings.md
.sisyphus/notepads/domains-implementation/: learnings.md
.sisyphus/notepads/wave-1-atf-cloud-runner/: learnings.md
.sisyphus/notepads/wave-2-execution/: learnings.md
.sisyphus/notepads/wave-2-introspection/: learnings.md
.sisyphus/plans/: atf-tools.md  domain-packages.md
.zed/: settings.json
docs/wiki/: Architecture.md  Configuration.md  Development.md  Getting-Started.md  Home.md  Safety-and-Policy.md  Telemetry.md  Tool-Packages.md  Tool-Reference.md
src/servicenow_mcp/: auth.py  choices.py  client.py  config.py  config.pyi  decorators.py  errors.py  mcp_state.py  packages.py  policy.py  preferred_tools.py  sentry.py  server.py  state.py  types.py  utils.py
src/servicenow_mcp/investigations/: acl_conflicts.py  deprecated_apis.py  error_analysis.py  performance_bottlenecks.py  slow_transactions.py  stale_automations.py  table_health.py
src/servicenow_mcp/tools/: _attachment_common.py  _payload.py  artifact_write.py  attachment.py  attachment_write.py  changes.py  debug.py  dev_utils.py  developer.py  documentation.py  flow_designer.py  introspection.py  investigations.py  metadata.py  record.py  record_write.py  relationships.py  table.py  testing.py  utility.py  workflow.py
src/servicenow_mcp/tools/domains/: __init__.py  change.py  cmdb.py  incident.py  knowledge.py  problem.py  request.py  service_catalog.py
src/servicenow_mcp/tools/flow_designer/: __init__.py  _action.py  _definition.py  _execution.py  _migration.py
tests/: conftest.py  helpers.py  test_artifact_write.py  test_attachment.py  test_auth.py  test_changes.py  test_choices.py  test_client.py  test_config.py  test_debug.py  test_decorators.py  test_dev_utils.py  test_developer.py  test_documentation.py  test_errors.py  test_flow_designer.py  test_introspection.py  test_investigation_helpers.py  test_investigations.py  test_metadata.py  test_packages.py  test_policy.py  test_preferred_tools.py  test_record.py  test_record_write.py  test_relationships.py  test_sentry.py  test_server.py  test_state.py  test_table.py  test_testing.py  test_utility.py  test_utils.py  test_workflow.py
tests/domains/: __init__.py  conftest.py  test_change.py  test_cmdb.py  test_helpers.py  test_imports.py  test_incident.py  test_knowledge.py  test_problem.py  test_request.py  test_service_catalog.py
tests/integration/: test_debug.py  test_domain_change.py  test_domain_incident.py  test_domain_problem.py  test_metadata.py  test_packages.py
tests/tools/: test_payload.py
