[project]
name = "servicenow-devtools-mcp"
version = "0.2.2"
description = "A developer & debug-focused MCP server for ServiceNow — 32 tools for platform introspection, change intelligence, debugging, investigations, and documentation generation."
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [
    { name = "Lasse Nielsen", email = "lasse@xerrion.dk" },
]
keywords = ["servicenow", "mcp", "model-context-protocol", "devtools", "debugging"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Debuggers",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    "uvicorn>=0.30.0",
    "starlette>=0.38.0",
]

[project.urls]
Homepage = "https://github.com/xerrion/servicenow-devtools-mcp"
Repository = "https://github.com/xerrion/servicenow-devtools-mcp"
Issues = "https://github.com/xerrion/servicenow-devtools-mcp/issues"

[project.scripts]
servicenow-devtools-mcp = "servicenow_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/servicenow_mcp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-m 'not integration' --cov=servicenow_mcp --cov-report=xml --cov-report=term-missing"
markers = [
    "integration: tests that run against a live ServiceNow instance (requires .env.local credentials)",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "respx>=0.21.0",
    "ruff>=0.9.0",
    "mypy>=1.14.0",
    "pytest-cov>=6.0.0",
]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "RUF"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.12"
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "servicenow_mcp.server"
disable_error_code = ["call-arg"]
