[project]
name = "servicenow-devtools-mcp"
version = "0.7.0"
description = "A developer & debug-focused MCP server for ServiceNow — 32 tools for platform introspection, change intelligence, debugging, investigations, and documentation generation."
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [
    { name = "Lasse Nielsen", email = "lasse@xerrion.dk" },
]
keywords = ["servicenow", "mcp", "model-context-protocol", "devtools", "debugging"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Debuggers",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    "uvicorn>=0.30.0",
    "starlette>=0.38.0",
    "toon-format",
]

[project.urls]
Homepage = "https://github.com/xerrion/servicenow-devtools-mcp"
Repository = "https://github.com/xerrion/servicenow-devtools-mcp"
Issues = "https://github.com/xerrion/servicenow-devtools-mcp/issues"

[project.scripts]
servicenow-devtools-mcp = "servicenow_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/servicenow_mcp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-m 'not integration' --cov=servicenow_mcp --cov-report=xml --cov-report=term-missing"
markers = [
    "integration: tests that run against a live ServiceNow instance (requires .env.local credentials)",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "respx>=0.21.0",
    "ruff>=0.9.0",
    "mypy>=1.14.0",
    "pytest-cov>=6.0.0",
]

[tool.ruff]
target-version = "py312"
line-length = 120
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "W",    # pycodestyle warnings
    "I",    # isort
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "RUF",  # ruff-specific rules
    "A",    # flake8-builtins (prevent shadowing builtins)
    "C4",   # flake8-comprehensions (optimize comprehensions)
    "T10",  # flake8-debugger (catch leftover debugger statements)
    "PIE",  # flake8-pie (miscellaneous good catches)
    "PT",   # flake8-pytest-style (pytest best practices)
    "RSE",  # flake8-raise (clean exception raising)
    "TC",   # type-checking imports
    "PERF", # perflint (performance anti-patterns)
    "FURB", # refurb (modern Python idioms)
    "LOG",  # logging best practices
    "FLY",  # flynt f-string conversion
    "RET",  # flake8-return
    "PLC",  # pylint conventions
    "PLE",  # pylint errors
    "PLW",  # pylint warnings
]
ignore = [
    "E501",    # line too long (formatter handles wrapping)
    "RET504",  # unnecessary variable assignment before return (aids readability)
    "TC001",   # no future annotations; would break runtime type resolution
    "A005",    # module shadowing standard-library module (false positive for types.py etc.)
    "PLC0415", # import not at top-level (project uses local imports to break circular deps)
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["PT011", "PT012"]
"src/servicenow_mcp/tools/domains/change.py" = ["A002"]  # MCP tool params shadow builtins (type)
"src/servicenow_mcp/tools/changes.py" = ["A002"]    # MCP tool params shadow builtins (format)

[tool.ruff.lint.isort]
known-first-party = ["servicenow_mcp"]

[tool.ruff.lint.flake8-pytest-style]
fixture-parentheses = false
mark-parentheses = false

[tool.ruff.format]
quote-style = "double"
docstring-code-format = true
line-ending = "lf"
indent-style = "space"

[tool.mypy]
python_version = "3.12"
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "servicenow_mcp.server"
disable_error_code = ["call-arg"]

[tool.uv.sources]
toon-format = { git = "https://github.com/toon-format/toon-python.git" }
