[project]
name = "servicenow-devtools-mcp"
version = "0.7.1"
description = "A developer & debug-focused MCP server for ServiceNow — 32 tools for platform introspection, change intelligence, debugging, investigations, and documentation generation."
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [
    { name = "Lasse Nielsen", email = "lasse@xerrion.dk" },
]
keywords = ["servicenow", "mcp", "model-context-protocol", "devtools", "debugging"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Debuggers",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    "uvicorn>=0.30.0",
    "starlette>=0.38.0",
    "toon-format",
]

[project.urls]
Homepage = "https://github.com/xerrion/servicenow-devtools-mcp"
Repository = "https://github.com/xerrion/servicenow-devtools-mcp"
Issues = "https://github.com/xerrion/servicenow-devtools-mcp/issues"

[project.scripts]
servicenow-devtools-mcp = "servicenow_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/servicenow_mcp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-m 'not integration' --cov=servicenow_mcp --cov-report=xml --cov-report=term-missing"
markers = [
    "integration: tests that run against a live ServiceNow instance (requires .env.local credentials)",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "respx>=0.21.0",
    "ruff>=0.9.0",
    "mypy>=1.14.0",
    "pytest-cov>=6.0.0",
    "basedpyright>=1.29.0",
]

[tool.ruff]
line-length = 120
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "W",    # pycodestyle warnings
    "I",    # isort
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "RUF",  # ruff-specific rules
    "C4",   # flake8-comprehensions
    "DTZ",  # flake8-datetimez
    "T20",  # flake8-print
    "PTH",  # flake8-use-pathlib
    "TC",   # flake8-type-checking
    "RET",  # flake8-return
    "PLW",  # pylint warnings
    "PT",   # flake8-pytest-style
    "A",    # flake8-builtins
    "COM",  # flake8-commas
    "PIE",  # flake8-pie
    "ISC",  # flake8-implicit-str-concat
    "G",    # flake8-logging-format
    "INP",  # flake8-no-pep420
    "TID",  # flake8-tidy-imports
    "ERA",  # eradicate (commented-out code)
]
ignore = [
    "E501",   # line too long (formatter handles this)
    "COM812", # missing trailing comma (conflicts with formatter)
    "ISC001", # implicit string concatenation (conflicts with formatter)
    "TC001", # no future annotations; would break runtime type resolution
    "TC002", # no future annotations; would break runtime type resolution
    "TC003", # no future annotations; would break runtime type resolution
    "RET504", # unnecessary assignment before return (reduces debuggability)
    "RET505", # unnecessary else after return (sometimes clearer with else)
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "T20",    # print statements OK in tests
    "ERA001", # commented-out code OK in tests
    "PT019",  # underscore-prefixed fixtures are used for @patch and side-effect injection
]
"src/servicenow_mcp/tools/domains/*.py" = [
    "A002",   # shadowing built-in "type" used as ServiceNow parameter name
]
"src/servicenow_mcp/tools/changes.py" = [
    "A002",   # same - "format" parameter from ServiceNow API
]

[tool.ruff.lint.isort]
known-first-party = ["servicenow_mcp"]
force-single-line = false
lines-after-imports = 2

[tool.ruff.lint.flake8-pytest-style]
fixture-parentheses = true
mark-parentheses = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.12"
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "servicenow_mcp.server"
disable_error_code = ["call-arg"]

[tool.basedpyright]
pythonVersion = "3.12"
reportAny = false
reportExplicitAny = false
reportUnusedCallResult = false
reportUnusedFunction = false
reportPrivateUsage = false
reportUnknownMemberType = false
reportUnknownArgumentType = false
reportUnknownVariableType = false
reportUnknownLambdaType = false
reportImplicitStringConcatenation = false

[tool.uv.sources]
toon-format = { git = "https://github.com/toon-format/toon-python.git" }
